# data-mining-machine-learning

./: README.md  pyproject.toml
data-mining-machine-learning/: Untitled.ipynb  data_pre_processing.py  main.py
data-mining-machine-learning/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
