[tool.poetry]
name = "data-mining-machine-learning"
version = "0.1.0"
description = ""
authors = ["Mário Victor Ribeiro Silva <mariovictorrs@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.1"
numpy = "^1.22.0"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
black = "^24.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
